--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -3,5 +3,5 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.facebook.react.modules.email"
   >
-    <uses-sdk android:minSdkVersion="16" />
+    <!-- <uses-sdk android:minSdkVersion="16" /> -->
 </manifest>
